Changes in Release 2.6.6
=============================================
[JOST-243] - Metadata reload errors logged on DEBUG only
[JOST-245] - BaseSAML2MessageDecoder tries to get SAML1 role descriptor

Changes in Release 2.6.5
=============================================
[JOST-240] - Allow reloading metadata providers to accept a null Timer

Changes in Release 2.6.4
=============================================
Remove endorsement of Xerces and Xalan (for further info see SIDP-619).

Changes in Release 2.6.3
=============================================
[JOST-239] - Switch to use new XML Tooling HostnameVerifier impl 

Changes in Release 2.6.2
=============================================
[JOST-223] - Misspelled error constant in SAML 1 StatusCode interface
[JOST-224] - Superfluous/wrong type constants in SAML 1 and SAML 2 interfaces
[JOST-226] - Mispelled method name in SAMLMDCredentialContext, getEncryptionMethod vs getEncryptionMethods 
[JOST-238] - https:// URLs with HttpResource or FileBackedHttpResource are vulnerable to MitM attacks (missing hostname verification)

Changes in Release 2.6.1
=============================================
[JOST-210] - AbstractSAMLObject should not override equals but not hashCode
[JOST-213] - Scoping class has incorrect xsi:type 
[JOST-215] - Opensaml1 failed to pass veracode due Use of Wrong Operator in String Comparison (CWE ID 597) 
[JOST-218] - AbstractMetadataProvider is incorrectly performing an unnecessary validity check and erroneous TRACE message
[JOST-219] - AbstractReloadingMetadataProvider refresh() is public, should be synchronized for concurrent access
[JOST-220] - IdP stopping metadata retrieval

Also, updating POM to implement:
[JXT-106] - Update Apache Santuario (xmlsec) to 1.5.6

Changes in Release 2.6.0
=============================================
[JOST-135] - Opensaml prunes empty xml namespaces, that are required for correct encryption 